--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: go
 go:
-  - 1.11.x
   - 1.12.x
   - 1.13.x
+  - 1.14.x
   - master
 before_install:
-  - go install github.com/go-bindata/go-bindata/...
+  - cd ../ && go install github.com/go-bindata/go-bindata/... && cd -
 script:
   - go test -v ./...
   - go build
@@ -29,4 +29,4 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
-    condition: $TRAVIS_GO_VERSION =~ ^1\.13
+    condition: $TRAVIS_GO_VERSION =~ ^1\.14
