--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
   - 1.14.x
   - master
 before_install:
-  - cd ../ && go install github.com/go-bindata/go-bindata/... && cd -
+  - GO111MODULE=off go get -u github.com/go-bindata/go-bindata/...
 script:
   - go test -v ./...
   - go build
