--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,11 @@ notifications:
     on_success: always
 deploy:
   provider: releases
-  api_key:
+  token:
     secure: $GH_TOKEN
   file_glob: true
   file: "*.tar.gz"
-  skip_cleanup: true
+  cleanup: true
   on:
     tags: true
     condition: $TRAVIS_GO_VERSION =~ ^1\.14
